--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-plugin-styled-components": "^3.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-phone-input-2": "^2.13.9",
     "styled-components": "^5.2.1",
     "styled-reset-advanced": "^1.0.3",
     "styled-system": "^5.1.5",
