--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-phone-input-2": "^2.13.9",
+    "react-textarea-autosize": "^8.3.0",
     "styled-components": "^5.2.1",
     "styled-reset-advanced": "^1.0.3",
     "styled-system": "^5.1.5",
