--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     ]
   },
   "dependencies": {
+    "@lifarl/react-scroll-snap-slider": "^2.0.0",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "2.30.1",
