--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "2.30.1",
+    "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-styled-components": "^3.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
     "react-phone-input-2": "^2.13.9",
     "react-textarea-autosize": "^8.3.0",
     "styled-components": "^5.2.1",
